fix: pet cards column gap bug on retina displays

--- a/shelter/sass/pages/pets.sass
+++ b/shelter/sass/pages/pets.sass
@@ -61,13 +61,13 @@
     flex-wrap: wrap
     justify-content: center
     @include media-tablet
-        padding: 0 12.24vw
-        column-gap: 5.21vw
+        padding: 0 94px
+        column-gap: 40px
         .pet-card:nth-last-child(-n+2)
             display: none 
     @include media-mobile
         max-width: 300px
         .pet-card:nth-last-child(-n+5)
-                display: none 
+            display: none 
     .pet-card
         @include media-tablet
